# python-eyelinkparser

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyproject_poetry.toml  setup_old.py
.circleci/: config.yml
.github/workflows/: python-package.yml  python_package.yml
converter/: EDF-ASC2XML.sh  awm.edf
converter/edf2ascii_ver16_source/: DISCLAIMER  edf2ascii  edf2ascii.c  makefile
docs/: tutorial_parse_eyelink.ipynb
eyelink_parser.egg-info/: PKG-INFO  SOURCES.txt
python_eyelinkparser.egg-info/: PKG-INFO  SOURCES.txt
src/python_eyelinkparser/eyelinkparser/: __init__.py  _eyelinkparser.py
src/python_eyelinkparser/eyetribeparser/: __init__.py  _eyetribeparser.py
src/python_eyelinkparser/gazepointparser/: __init__.py  _gazepointparser.py
tests/: __init__.py  test_import.py  test_tutorial.py
